@@ -25,7 +25,7 @@ lsc <- function(envir, all.names=FALSE, pattern)
   if (missing(envir))
     envir <- .GlobalEnv
   
-  if (.pbdenv$whoami == "local")
+  if (iam("local"))
     print(ls(envir=envir, all.names=all.names, pattern=pattern))
   
   return(invisible(TRUE))
@@ -57,7 +57,7 @@ lsc <- function(envir, all.names=FALSE, pattern)
 rmc <- function(..., list=character(), envir)
 {
   ### TODO error checking
-  if (.pbdenv$whoami == "local")
+  if (iam("local"))
   {
     if (missing(envir))
       envir <- .GlobalEnv
@@ -94,7 +94,7 @@ rmc <- function(..., list=character(), envir)
 evalc <- function(expr)
 {
   ### TODO basically everything
-  if (.pbdenv$whoami == "local")
+  if (iam("local"))
     print(eval(expr=expr))
   
   return(invisible(TRUE))
